package edu.fiuba.algo3.modelo.interfaces;

public interface Comprable {
    Comprable comprar();
}
